@@ -1,7 +1,7 @@
 package uk.gov.hmcts.reform.lrdapi.service.impl;
 
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -25,10 +25,9 @@ import java.util.List;
 import java.util.function.BooleanSupplier;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
-import static org.apache.commons.lang.BooleanUtils.isFalse;
+import static org.apache.commons.lang3.BooleanUtils.isFalse;
 import static org.apache.commons.lang3.ObjectUtils.isEmpty;
 import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
@@ -116,8 +115,7 @@ public class CourtVenueServiceImpl implements CourtVenueService {
         validateCourtVenueFilters(result);
 
         List<String> courtTypeIdList = StringUtils.isEmpty(courtTypeId) ? null :
-            Arrays.stream(courtTypeId.split(COMMA)).map(String::strip).collect(
-                Collectors.toList());
+            Arrays.stream(courtTypeId.split(COMMA)).map(String::strip).toList();
 
         String isCaseManagementLocation = (StringUtils.isNotEmpty(result.getIsCaseManagementLocation()))
             ? result.getIsCaseManagementLocation().toUpperCase()
@@ -244,7 +242,7 @@ public class CourtVenueServiceImpl implements CourtVenueService {
         return courtVenues
             .stream()
             .map(LrdCourtVenueResponse::new)
-            .collect(Collectors.toUnmodifiableList());
+            .toList();
     }
 
     private void handleIfCourtVenuesEmpty(BooleanSupplier courtVenueResponseVerifier,
@@ -279,7 +277,7 @@ public class CourtVenueServiceImpl implements CourtVenueService {
 
         return inputLrdCourtVenueResponse.stream()
             .filter(allPredicates.stream().reduce(x -> true, Predicate::and))
-            .collect(Collectors.toList());
+            .toList();
 
     }
 
